# sudoku_solver

./: .gitignore  Digits_recognition_from_photo.ipynb  MNIST model on torch.ipynb  Makefile  README.md  augmenting_dataset.ipynb  call.py  flake8.config.ini  flake8.solver.config.ini  flake8.tests.config.ini  pyproject.toml
model/: augment.py  dataset.py  helpers.py  model.py
sudoku_solver/: __init__.py  candidates.py  datatypes.py  exceptions.py  sudoku_solver.py
tests/: __init__.py  exceptions.py  fixtures.py  test_solver.py
