[tool.poetry]
name = "sudoku_solver"
version = "0.1.0"
description = "traning python dev skills"
authors = ["salaxieb <salaxieb.ildar@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
mypy = "^0.812"
flake8 = "^3.9.1"
pydantic = "^1.8.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
